--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: unicode
   database: palaksPhotoWebsite_development
   pool: 5
-  username: palaksPhotoWebsite
+  username: postgres
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -44,11 +44,11 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: unicode
   database: palaksPhotoWebsite_test
   pool: 5
-  username: palaksPhotoWebsite
+  username: postgres
   password:
 
 production:
